# OpenGL-1st_person_prism

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/game/: CameraController.h
src/render/: render.h  screen.h
src/util/: registry.h
